--- a/style.css
+++ b/style.css
@@ -1,51 +1,82 @@
 .text1 {
-    text-align: center;
-    font-weight: bold;
-    font-size: 35px;
-    color: black;
+  text-align: center;
+  font-weight: bold;
+  font-size: 35px;
+  color: black;
 }
 
 .text-principal {
-    background-color: rgb(146, 215, 192);
-    padding: 30px;
+  background-color: rgb(146, 215, 192);
+  padding: 30px;
 }
 
 .principal-cargas {
-    margin-top: 5vh;
-    margin-left: 5vh;
+  margin-top: 5vh;
+  margin-left: 5vh;
 }
 
 .titulo-cargas {
-    text-align: center;
+  text-align: center;
 }
 
 .carga-1 {
-    margin-left: 5vh;
-    color: violet;
+  padding: 20px;
+  margin-left: 5vh;
+  color: violet;
 }
 
 .carga-2 {
-    margin-left: 5vh;
-    margin-top: 2vh;
+  padding: 20px;
+  margin-left: 5vh;
+  margin-top: 2vh;
 }
 
 .carga-3 {
-    margin-left: 5vh;
-    margin-top: 2vh;
+  padding: 20px;
+  margin-left: 5vh;
+  margin-top: 2vh;
 }
 
 .carga-4 {
-    margin-left: 5vh;
-    margin-top: 2vh;
+  padding: 20px;
+  margin-left: 5vh;
+  margin-top: 2vh;
 }
 
 .carga-5 {
-    margin-left: 5vh;
-    margin-top: 2vh;
+  padding: 20px;
+  margin-left: 5vh;
+  margin-top: 2vh;
 }
 
 .btn {
-    margin-left: 5vh;
-    width: 30.5%;
-    color: whitesmoke;
+  margin-left: 5vh;
+  width: 30.5%;
+  color: whitesmoke;
+}
+
+.carga-contenedor {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 25px;
+}
+
+.btn-content {
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.result-content {
+  padding: 0 0px 25px 40px;
+}
+
+#process {
+  padding: 25px 0px 25px 40px;
+  background: #dddddd;
+  width: 90%;
+  margin-left: 25px;
+  border-radius: 15px;
+  margin-bottom: 25px;
 }
